# Matrix

./: .gitignore  CMakeLists.txt  README.md  library.h  matrix.cpp  matrix.hpp  test.cpp
.github/workflows/: codeql.yml  testing.yml
tests/: CMakeLists.txt
tests/GoogleTest/: CMakeLists.txt  MatrixOperatorTest.cpp  operator_test.cpp
